from multi graddle to just Maven